--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("../img/ep_naturalwhite.png");
+    background-image: url("../assets/img/ep_naturalwhite.png");
 }
 header{
     margin-top: 10px;
